--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images": "^1.2.0-beta.7",
+    "react-medium-image-zoom": "^4.3.5",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
+    "react-viewer": "^3.2.2",
+    "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
