--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proyecto",
-  "homepage": "https://Yuls.github.io/CiberseguridadWS",
+  "homepage": "https://Yuls-98.github.io/CiberseguridadWS",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
